--- a/client/src/components/forms/SearchMovieForm.less
+++ b/client/src/components/forms/SearchMovieForm.less
@@ -8,6 +8,7 @@
         color: @white1;
         margin-bottom: 1.5rem;
         font-size: 2rem;
+        width: 100%;
     }
     &-input {
         width: 100%;
@@ -19,11 +20,13 @@
         border-bottom: 0.2rem solid @red1;
     }
     &-bottom-panel {
+        display: flex;
+        flex-flow: row;
+        justify-content: space-between;
         margin-top: 1.5rem;
         width: 100%;
     }
     &-filter {
-        float: left;
         &-label {
             text-transform: uppercase;
             color: @white1;
@@ -51,17 +54,71 @@
         text-align: right;
         float: right;
         background: @red1;
-        padding: 0.5rem 7rem;
+        padding: 0.5rem 7rem; // max-width: 20rem;
+        max-height: 5rem;
+        text-align: center;
+        line-height: 2rem;
         &:hover {
             background: lighten(@red1, 5%);
         }
     }
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 1000px) {
     .searchMovie {
         &-form {}
         &-label {}
         &-input {}
+        &-filter {
+            &-label {}
+            &-choise {
+                display: block;
+                margin: 0;
+                margin-top: 0.5rem;
+                width: 10rem;
+            }
+        }
+        &-submit-button {}
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .searchMovie {
+        &-form {}
+        &-label {
+            text-align: center;
+        }
+        &-input {}
+        &-filter {
+            &-label {}
+            &-choise {}
+        }
+        &-submit-button {}
+    }
+}
+
+@media only screen and (max-width: 450px) {
+    .searchMovie {
+        &-form {}
+        &-label {}
+        &-input {}
+        &-bottom-panel {
+            display: block;
+        }
+        &-filter {
+            width: 100%;
+            &-label {}
+            &-choise {
+                display: inline-block;
+                margin-left: 1rem;
+            }
+        }
+        &-submit-button {
+            display: block;
+            width: 100%;
+            height: 4rem;
+            float: none;
+            margin-top: 1rem;
+        }
     }
 }
