movie card mark up

--- a/client/src/containers/headers/home/HomeHeader.less
+++ b/client/src/containers/headers/home/HomeHeader.less
@@ -1,5 +1,5 @@
 .header {
-    background: url("../../../../static/images/header.jpg");
+    background: url("/assets/images/header.jpg");
     background-size: 100%;
     width: 100%;
     min-height: 22rem;
