--- a/client/src/styles/index.less
+++ b/client/src/styles/index.less
@@ -39,5 +39,5 @@ input::-webkit-input-placeholder {
 
 @font-face {
     font-family: Roboto;
-    src: url("../../static/fonts/Roboto/Roboto-Regular.ttf");
+    src: url("/assets/fonts/Roboto/Roboto-Regular.ttf");
 }
