--- a/client/src/components/components.less
+++ b/client/src/components/components.less
@@ -1,3 +1,3 @@
-@import "./forms/SearchMovieForm.less";
 @import "./footer/Footer.less";
 @import "./resultPanel/ResultPanel.less";
+@import "./movieCard/MovieCard.less";
