enzyme | jest | snapshots

--- a/client/src/containers/containers.less
+++ b/client/src/containers/containers.less
@@ -1,3 +1,3 @@
 @import "./headers/home/HomeHeader.less";
-@import "./forms/SearchMovieForm.less";
+@import "./forms/movie/SearchMovieForm.less";
 @import "./results/Results.less";
