--- a/client/src/styles/index.less
+++ b/client/src/styles/index.less
@@ -1,7 +1,7 @@
 @import "./colors";
 @import "../containers/containers";
 @import "../components/components";
-@import "../views/Home";
+@import "../views/home/Home";
 html {
     height: 100%;
 }
